Новая версия страницы выставок

--- a/assets/sass/newStyles/_fixes.scss
+++ b/assets/sass/newStyles/_fixes.scss
@@ -1016,6 +1016,15 @@ body {
 		& > a[href="#nav"] {
 			background-image: url(../../images/icon/burger.svg);
 		}
+
+		.sub-scroll-menu {
+			opacity: 0;
+			transition: opacity .3s ease-in-out;
+
+			&.visible {
+				opacity: 1;
+			}
+		}
 	}
 }
 
