Коммит изменений от Димы

--- a/assets/sass/newStyles/_main-modal.scss
+++ b/assets/sass/newStyles/_main-modal.scss
@@ -276,6 +276,10 @@
         }
     }
 
+    & .popup-slider {
+      overflow: hidden;
+    }
+
     // .close-modal {
     //     width: 28px;
     //     height: 28px;
