--- a/assets/sass/newStyles/_main-modal.scss
+++ b/assets/sass/newStyles/_main-modal.scss
@@ -16,7 +16,7 @@
         transition: opacity .3s ease-in-out;
         @media (max-width: 1440px) {
             position: static;
-            padding: 69px 92px 24px;
+            padding: 24px 92px;
             align-items: flex-end;
             justify-content: flex-end;
         }
@@ -88,6 +88,16 @@
                 max-width: 100%;
                 position: relative;
             }
+            @media (min-width: $small) {
+              display: flex;
+              flex-direction: row;
+              justify-content: center;
+              max-width: 100%;
+              position: absolute;
+              top: 50%;
+              left: 50%;
+              transform: translate(-50%, -50%);
+            }
             @media (max-width: $xsmall) {
                 max-width: 100%;
             }
@@ -97,6 +107,8 @@
             }
 
             img {
+                  width: 100%;
+    height: 100%;
                 max-width: 100%;
                 max-height: 95vh;
                 @media (max-width: $small) {
@@ -106,6 +118,9 @@
                 }
                 @media (max-width: $xsmall) {
                     width: 100%;
+                }
+                @media (min-width: $small) {
+                  order: 2;
                 }
             }
 
@@ -120,6 +135,16 @@
                     position: absolute;
                     left: 0;
                     width: 100%;
+                }
+                @media (min-width: $small) {
+                  order: 1;
+                  align-self: flex-end;
+                  padding-right: 50px;
+                  display: block;
+                  min-width: 300px;
+                  position: relative;
+                  top: auto;
+                  left: 0;
                 }
                 @media (max-width: $xsmall) {
                     padding: 0 20px;
