--- a/assets/sass/newStyles/_main-modal.scss
+++ b/assets/sass/newStyles/_main-modal.scss
@@ -19,6 +19,7 @@
             padding: 24px 92px;
             align-items: flex-end;
             justify-content: flex-end;
+            width: 100%;
         }
         @media (max-width: $small) {
             padding: 0 40px;
@@ -87,6 +88,8 @@
             @media (max-width: $small) {
                 max-width: 100%;
                 position: relative;
+                padding-bottom: 150px;
+                width: 100%;
             }
             @media (min-width: $small) {
               display: flex;
@@ -97,9 +100,15 @@
               top: 50%;
               left: 50%;
               transform: translate(-50%, -50%);
+              align-items: center;
             }
             @media (max-width: $xsmall) {
                 max-width: 100%;
+                
+                //
+                padding-bottom: 0;
+                max-height: calc(100vh - 156px);
+                width: 100%;
             }
 
             &.now-hidden {
@@ -107,20 +116,24 @@
             }
 
             img {
-                  width: 100%;
-    height: 100%;
+                // width: 100%;
+                // height: 100%;
                 max-width: 100%;
                 max-height: 95vh;
                 @media (max-width: $small) {
-                    max-height: unset;
-                    margin: 0;
+                    margin: 0 auto;
                     display: block;
+                    max-height: calc(100vh - 156px)
                 }
                 @media (max-width: $xsmall) {
                     width: 100%;
+
+                    //
+                    width: auto;
+                    max-height: calc(100vh - 156px);
                 }
                 @media (min-width: $small) {
-                  order: 2;
+                    order: 2;
                 }
             }
 
@@ -148,6 +161,10 @@
                 }
                 @media (max-width: $xsmall) {
                     padding: 0 20px;
+
+                    //
+                    bottom: unset;
+                    top: calc(100% + 10px);
                 }
 
                 .title {
