фикс переменной сетки

--- a/assets/sass/newStyles/_variables.scss
+++ b/assets/sass/newStyles/_variables.scss
@@ -6,7 +6,8 @@
 // $xsmall: 480px;
 
 $xlarge: 1920px;
-$large: 2560px;
+//$large: 2560px;
+$large: 1920px;
 $medium: 1024px;
 $small: 1280px;
 $xsmall: 768px;
