--- a/assets/sass/newStyles/_project-about.scss
+++ b/assets/sass/newStyles/_project-about.scss
@@ -31,6 +31,7 @@
         column-count: 3;
         font-size: 14px;
         line-height: 17px;
+        column-gap: 2em;
         @media (max-width: $small) {
             column-count: 2;
         }
